registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
spec:
  ingressClassName: cilium
  rules:
  - host: registry.localhost
    http:
      paths:
      - backend:
          service:
            name: registry
            port:
              name: http
        path: /
        pathType: Prefix
